# umrrRadar

./: CMakeLists.txt  README.md  aboutDialog.cpp  aboutDialog.h  avgAccumulator.h  connectionPanel.cpp  connectionPanel.h  filesystemLogManager.cpp  filesystemLogManager.h  gui_helpers.cpp  gui_helpers.h  hw_detection.cpp  hw_detection.h  logPanel.cpp  logPanel.h  main.cpp  mainFrame.cpp  mainFrame.h  manifest.h  mathplot.h  measurePanel.cpp  measurePanel.h  persistenceManager.cpp  persistenceManager.h  phyConnectionManager.cpp  phyConnectionManager.h  settingsDialog.cpp  settingsDialog.h  triangularAvg.cpp  triangularAvg.h  welfordAvg.cpp  welfordAvg.h
FT232R/: originale_device0.xml  patched_device0.xml
umrrParser/: CMakeLists.txt  main.cpp  umrrParser  umrrParser.cpp  umrrParser.h
